# site

./: Cargo.toml  index.html  watch.sh
anablog/: Cargo.toml
anablog/src/: analytics.html  main.rs  md.rs  page.rs  page_entry.rs  rss.rs  site_pages.rs  templates.rs
home/: index.html  index.md
magic-bitboards/: index.html  index.md
pones-p1/: index.html  index.md
projects/: index.html  index.md
render-scripts/: custom_codeblocks.js  render.js  template.html
shared/: base.css
writing/: feed.rss  feed.xml  index.html
writings/: index.html  index.md
