[package]
name = "anablog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
comrak = "0.19.0"
maud = "0.25.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.8.26"
